--- a/Rock paper scissors with python.ipynb
+++ b/Rock paper scissors with python.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Rock paper scissors game"
+    "# Rock paper scissors game."
    ]
   },
   {
